# NEXOS-Desktop

./: CMakeLists.txt  CMakeLists.txt.user.70460b5  CMakeLists.txt.user.d86a24f  desktopcm.cpp  desktopcm.h  desktopcm.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui
Resources/: box.html  resources.qrc
